# themis

./: .gitignore  Cargo.toml
api/: .gitignore  package-lock.json
api/src/: app.module.ts
api/src/search/: helper.ts  search.controller.ts  search.module.ts  search.service.ts
crates/domain/: Cargo.toml
crates/domain/src/: acco.rs  lib.rs  text_acco.rs
crates/extractor/: Cargo.toml
crates/extractor/src/: lib.rs  meili.rs  tar.rs
crates/themis/: Cargo.toml
crates/themis/src/: configuration.rs  lib.rs  startup.rs
crates/themis/src/routes/doc/: mod.rs
src/: error.rs  lib.rs  zip.rs
src/domain/: acco.rs  mod.rs
themis/: index.html
themis-back/: package.json
themis-back/src/search/interfaces/: elastic-config.interface.ts
themis-front/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
themis-front/src/: router.ts
themis-front/src/components/: attributes-selector.tsx  card.tsx
themis-front/src/components/helpers/: formatters.ts
themis-front/src/models/: search.ts  settings.ts
themis-front/src/pages/admin/settings/[indice]/: index.tsx
themis/src/: main.tsx
themis/src/components/: tag.tsx
themis/src/pages/acco/: index.tsx
toolbox/: Cargo.toml
toolbox/src/: lib.rs  main.rs
toolbox/src/domain/: acco.rs  mod.rs  text_acco.rs  traits.rs
toolbox/src/extractor/: configuration.rs  elastic.rs  mod.rs  tar.rs
toolbox/src/extractor/elastic/: builder.rs  elastic.rs  errors.rs  mod.rs
