[package]
name = "themis-lib"
version = "0.1.0"
edition = "2021"
default-run = "themis"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
askama = { version = "0.12.0", features = ["serde", "serde_json", "with-actix-web", "mime", "mime_guess"] }
config = "0.13.3"
custom_error = "1.9.2"
diesel = "2.0.3"
docx-rust = "0.1.5"
flate2 = { version = "1.0.25", default-features = false, features = ["miniz_oxide", "rust_backend"] }
futures = "0.3.28"
meilisearch-sdk = "0.22.1"
quick-xml = { version = "0.28.1", features = ["serialize"] }
rayon = "1.7.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde-aux = "4.1.2"
tar = { version = "0.4.38", default-features = false }
zip = { version = "0.6.4", default-features = false }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
