[package]
default-run = "themis"
edition = "2021"
name = "themis-lib"
version = "0.1.0"

[dependencies]
actix-web = "4.3.1"
sqlx = {version = "0.6.3", default-features = false}

#project crates
domain = {path = 'crates/domain'}
extractor = {path = "crates/extractor"}
themis = {path = "crates/themis"}
