[package]
default-run = "themis"
edition = "2021"
name = "themis-lib"
version = "0.1.0"

[dependencies]
actix-web = "4.3.1"
clap = {version = "4.2.1", features = ["derive"]}
meilisearch-sdk = "0.22.1"
secrecy = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0.159", features = ["derive"]}
sqlx = {version = "0.6.3", default-features = false}

#project crates
domain = {path = 'crates/domain'}
extractor = {path = "crates/extractor"}
themis = {path = "crates/themis"}
