[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.28.1", features = ["serialize"] }
flate2 = { version = "1.0.25", default-features = false, features = ["miniz_oxide", "rust_backend"] }
tar = { version = "0.4.38", default-features = false }

# workspace crates
domain = { path = "../domain" }
