[package]
edition = "2021"
name = "extractor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
flate2 = {version = "1.0.25", default-features = false, features = ["miniz_oxide", "rust_backend"]}
meilisearch-sdk = "0.22.1"
quick-xml = {version = "0.28.1", features = ["serialize"]}
secrecy = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0.159", features = ["derive"]}
serde-aux = "4.1.2"
tar = {version = "0.4.38", default-features = false}

# workspace crates
domain = {path = "../domain"}
futures = "0.3.28"
